# classSOC

./: .gitignore  README.md  pyproject.toml  run-with-slack.ps1
src/: __init__.py  cli.py  config.py  detector.py  fetcher.py  models.py  notifier.py  parser.py  runner.py  state.py
tests/: test_detector.py  test_parser.py
tests/fixtures/: full_closed.html  open.html  waitlisted.html
