[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soc-watch"
version = "0.1.0"
description = "UCLA SOC Availability Watcher - monitor course pages for seat openings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
soc-watch = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
